Complete rework of Estimates Table. Correct aggregation of values Columns are sorted by name (easier to find a given disembarkation region) Mouse over cells highlights row and column for easier inspection Using DataTables to allow pagination, sorting by column values, horizontal scrolling, and fixed row headers (first column). Download XLS feature for Table AND Timeline Reset buttons (Flags/Embarkation&Disembarkation) now work with all tabs

--- a/voyages/sitemedia/css/assessment/assessment-estimates.css
+++ b/voyages/sitemedia/css/assessment/assessment-estimates.css
@@ -101,13 +101,19 @@ div.estimates-table-options {
 	border: 1px solid #115676;
 	padding: 5px 10px 5px 10px;	}
 
+div.estimates-table {
+	border: 1px solid #115676;
+}
+
 div.estimates-table table.simple-table {
-	border-collapse: collapse; }
+	border-top: 1px solid #115676
+}
 	
 div.estimates-table table.simple-table td {
 	text-align: right;
 	padding: 5px;
-	border: 1px solid #115676; }
+	border-right: 1px solid #115676;
+	border-bottom: 1px solid #115676; }
 	
 div.estimates-table table.simple-table td.tbl-label {
 	background-color: #D0EFF0;
@@ -121,7 +127,54 @@ div.estimates-table table.simple-table td.simple-table-row-label,
 div.estimates-table table.simple-table td.simple-table-col-label {
 	background-color: #F1E7C8;
 	text-align: left; }
-	
+
+.paginate_button {
+      box-sizing: border-box;
+      display: inline-block;
+      min-width: 1.5em;
+      padding: 0.5em 1em;
+      margin-left: 2px;
+      text-align: center;
+      text-decoration: none !important;
+      cursor: pointer;
+      *cursor: hand;
+      color: #333333 !important;
+      border: 1px solid transparent; }
+
+  .paginate_button:hover {
+	color: white !important;
+	border: 1px solid #111111;
+	background-color: #585858;
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #585858), color-stop(100%, #111111));
+	/* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top, #585858 0%, #111111 100%);
+	/* Chrome10+,Safari5.1+ */
+	background: -moz-linear-gradient(top, #585858 0%, #111111 100%);
+	/* FF3.6+ */
+	background: -ms-linear-gradient(top, #585858 0%, #111111 100%);
+	/* IE10+ */
+	background: -o-linear-gradient(top, #585858 0%, #111111 100%);
+	/* Opera 11.10+ */
+	background: linear-gradient(to bottom, #585858 0%, #111111 100%);
+	/* W3C */ }
+
+.paginate_button.current, .paginate_button.current:hover {
+	color: #333333 !important;
+	border: 1px solid #cacaca;
+	background-color: white;
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, white), color-stop(100%, gainsboro));
+	/* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top, white 0%, gainsboro 100%);
+	/* Chrome10+,Safari5.1+ */
+	background: -moz-linear-gradient(top, white 0%, gainsboro 100%);
+	/* FF3.6+ */
+	background: -ms-linear-gradient(top, white 0%, gainsboro 100%);
+	/* IE10+ */
+	background: -o-linear-gradient(top, white 0%, gainsboro 100%);
+	/* Opera 11.10+ */
+	background: linear-gradient(to bottom, white 0%, gainsboro 100%);
+	/* W3C */ }
+
 /***********************************
 * timeline
 ***********************************/	
@@ -445,4 +498,11 @@ input.button-save {
 
 input.button-save:hover {	
 	background-color: #B4E6E6;}
-	
+
+.highlight-row {
+	background-color: lightgray;
+}
+
+.highlight-col {
+	background-color: lightgray;
+}
